--- a/listen.html
+++ b/listen.html
@@ -16,7 +16,7 @@
 				<div style="text-align: center;">Hauptbahnhof</div>
 				<div style="display: flex;">
 					<span>Der Weg zum Hautbahnhof führt über die Brücke, dann erste Straße links die zweite wiederum rechts........................</span>
-					<img src="dampflok.gif" alt="Dampflok" style="float: right; width: 100px; height: 80px;">
+					<img src="/images/dampflok.gif" alt="Dampflok" style="float: right; width: 100px; height: 80px;">
 				</div>
 			</li>
 			<li>
