--- a/formular.html
+++ b/formular.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Formular</title>
+	<title>Document</title>
 </head>
 <body>
-	<form action="/verarbeitung.php" method="GET">
-		<h1>Mein erstes Formular</h1>
-		<h2>Umfrage zur Veranstaltung<br/>"Webtechnologien"</h2>
-		<label for="firstname">Vorname:</label>
-		<input type="text" name="firstname" id="firstname" placeholder="Dein Vorname">
-		<br><br>
-		<label for="lastname">Nachname:</label>
-		<input type="text" name="lastname" id="lastname" placeholder="Dein Nachname">
-		<br><br>
-		<label for="semester">Semester:</label>
-		<input type="radio" name="semester" id="semester-1" value="1">
-		<label for="semester-1">1</label>
-		<input type="radio" name="semester" id="semester-2" value="2">
-		<label for="semester-2">2</label>
-		<input type="radio" name="semester" id="semester-3" value="3">
-		<label for="semester-3">3</label>
-		<input type="radio" name="semester" id="semester-4" value="4">
-		<label for="semester-4">4</label>
-		<br><br>
-		<div>Aktivitäten außerhalb der Vorlesung:</div>
-		<br>
-		<input type="checkbox" name="aktion" id="skript" value="skript">
-		<label for="skript">täglicher Blick ins Skript</label>
-		<input type="checkbox" name="aktion" id="übungsaufgabe" value="übungsaufgabe">
-		<label for="übungsaufgabe">2 Übungsaufgaben pro Woche lösen</label>
-		<input type="checkbox" name="aktion" id="mitschrieb" value="mitschrieb">
-		<label for="mitschrieb">Mitschrieb überarbeiten</label>
-		<br><br>
-		<label for="kommentar">Was hat Dir bisher am besten gefallen?</label>
-		<br>
-		<textarea name="kommentar" id="kommentar" cols="50" rows="6">Also...</textarea>
-		<br><br>
-		<input type="submit" value="OK">
+	<form>
+		<div>
+			<label for="birthdate">Geburtsdatum:</label>
+			<input type="date" id="birthdate">
+		</div>
+		<div>
+			<label for="color">Lieblingsfarbe:</label>
+			<input type="color" name="color" id="color">
+		</div>
+		<div>
+			<label for="count">Anzahl (1-10):</label>
+			<input type="range" name="count" id="count" min="1" max="10">
+		</div>
+		<div>
+			<label for="email">E-Mail-Adr.:</label>
+			<input type="email" name="email" id="email" placeholder="test@test.de">
+		</div>
+		<div>
+			<label for="number">Wähle Zahl:</label>
+			<input type="number" name="number" id="number" value="30">
+			<label for="number">(10er-Schritte)</label>
+		</div>
+		<div>
+			<label for="password">Passwort:</label>
+			<input type="password" name="password" id="password">
+		</div>
+		<div>
+			<label for="search">Suche nach:</label>
+			<input type="search" name="search" id="search" placeholder="Search">
+		</div>
+		<input type="submit" value="Daten absenden">
 	</form>
 </body>
 </html>
