--- a/1-termin/html-tutorial.html
+++ b/1-termin/html-tutorial.html
@@ -52,7 +52,7 @@
 	<h2>Bilder</h2>
 	<p>Wird das Bild angeklickt, wird https://www.hs-coburg.de/ geladen:</p>
 	<a href="https://www.hs-coburg.de/">
-		<img title="Klick mich" src="/images/smile.gif" alt="smile" class="smile-link" >
+		<img title="Klick mich" src="images/smile.gif" alt="smile" class="smile-link" >
 	</a>
 </body>
 </html>
