user center and br to clear

--- a/1-termin/listen.html
+++ b/1-termin/listen.html
@@ -17,10 +17,11 @@
 			<ol type="A">
 				<li>
 					<font color="blue">
-						<div align="center">Hauptbahnhof</div>
+						<center>Hauptbahnhof</center>
 						<br>
 						<img src="images/dampflok.gif" alt="Dampflok" height="80px" width="100px" align="right">
 						<span>Der Weg zum Hautbahnhof führt über die Brücke, dann erste Straße links die zweite wiederum rechts........................</span>
+						<br clear="both"/> 
 					</font>
 				</li>
 				<li>
