--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
 			</ol>
 		</li>
 	</ol>
+
+	<h4>Holy Grail Layout</h4>
+	<ul>
+		<li><a href="/holy-grail/flex.html">flex</a></li>
+		<li><a href="/holy-grail/grid.html">grid</a></li>
+	</ul>
+
 </body>
 </html>
